<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_setting"
    android:paddingLeft="50dp"
    android:paddingTop="15dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="180dp"
            android:gravity="right"
            android:text="@string/setting_base"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="14dp"
            android:drawableTop="@drawable/icon_setting_code"
            android:gravity="center"
            android:text="@string/password_setting"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_room_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:drawablePadding="14dp"
            android:drawableTop="@drawable/icon_setting_number"
            android:gravity="center"
            android:text="@string/room_no_setting"
            android:textColor="@android:color/white"
            android:visibility="gone"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_mng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:drawablePadding="14dp"
            android:drawableTop="@drawable/icon_setting_backstage"
            android:gravity="center"
            android:text="@string/background_mng"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tv_serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:drawablePadding="14dp"
            android:drawableTop="@drawable/icon_setting_password"
            android:gravity="center"
            android:text="@string/serial_setting"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_infrared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:drawablePadding="14dp"
            android:drawableTop="@drawable/icon_setting_air"
            android:gravity="center"
            android:text="@string/infrared_setting"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="gone"
             />



    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_android_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="130dp"
            android:gravity="right"
            android:text="@string/android_setting"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_system_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="14dp"
            android:drawableTop="@drawable/service_setting_android"
            android:gravity="center"
            android:text="@string/system_setting"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tv_calibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:drawablePadding="14dp"
            android:drawableTop="@drawable/service_setting_calibration"
            android:gravity="center"
            android:text="@string/calibration"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_back_ktv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="130dp"
            android:text="@string/back_to_ktv"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="14dp"
            android:drawableTop="@drawable/service_setting_backtoktv"
            android:gravity="center"
            android:text="@string/ktv_name"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </TableRow>
</TableLayout>

