<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dlg_round_inner">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/text_download_list"
        android:textSize="22sp"
        android:background="@drawable/dlg_divider"
        android:textColor="@color/pay_text_normal"/>
    <RelativeLayout
        android:id="@+id/list_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:paddingLeft="40dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/title_music_name"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:text="@string/text_music_name"
            android:textColor="@color/dlg_back_pressed"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/title_singer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/text_singer"
            android:textColor="@color/dlg_back_pressed"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/title_progress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textColor="@color/dlg_back_pressed"
            android:textSize="18sp" />

    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:scrollbars="vertical" />
</LinearLayout>